--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "<h1 align=\"center\">   <img alt=\"JobsCalc\" title=\"JobsCalc\" src=\"https://i.imgur.com/Veqm7Gh.png\" width=\"220px\" /> </h1>",
   "main": "src/server.js",
   "scripts": {
+    "start": "node src/server.js",
     "init-db": "node src/db/init.js",
     "dev": "nodemon .",
     "test": "echo \"Error: no test specified\" && exit 1"
